[package]
name = "coito"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
clap  = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
toml  = { version = "0.8.19" }

[dev-dependecies]
cucumber = { version = "0.21.1" }

[[test]]
name = "coito"
harness = false
